tests/semantic_analysis/error/redefine_struct.c
redefine_struct\.c:5:1: error:.*